HV-1187 Add required --add-opens options
Switch to gmavenplus and Groovy 2.4.8-SNAPSHOT
Switch to patch-gen-maven-plugin 2.0.1.Alpha3-SNAPSHOT